remove bootargs in dtb and remove connection of ramips-timer to intc

--- a/slcore/database/qemu.timer.yaml
+++ b/slcore/database/qemu.timer.yaml
@@ -91,7 +91,18 @@ oxsemi,ox820-rps-timer: {extend: 'timer,generic'}
 picochip,pc3x2-timer: {extend: 'timer,generic'}
 qcom,kpss-timer: {extend: 'timer,generic'}
 qcom,scss-timer: {extend: 'timer,generic'}
-ralink,rt2880-timer: {extend: 'timer,generic'}
+ralink,rt2880-timer:
+    parameters: [intcp, irqns, irqc]
+    get_header: ['hw/timer/{{ name }}.h']
+    get_field: 
+        - '{{ name|upper }}State timer;'
+    get_body:
+        - object_initialize(&s->timer, sizeof(s->timer), TYPE_{{ name|upper }});
+        - qdev_set_parent_bus(DEVICE(&s->timer), sysbus_get_default());
+        - object_property_set_bool(OBJECT(&s->timer), true, "realized", &err);
+        - sysbus_mmio_map(SYS_BUS_DEVICE(&s->timer), 0, {{ reg.base }});
+          # - "{% for i in irqc|range %}qdev_connect_gpio_out(DEVICE(&s->timer), {{ i }}, {{ intcp.get_irqn }});\n    {% endfor %}"
+    external: True
 rda,8810pl-timer: {extend: 'timer,generic'}
 renesas,16bit-timer: {extend: 'timer,generic'}
 renesas,8bit-timer: {extend: 'timer,generic'}
