add ramips-rt3883 support

--- a/slcore/database/support.mips.yaml
+++ b/slcore/database/support.mips.yaml
@@ -108,9 +108,12 @@ pistachio:
 pmcs-msp71xx: {device_tree: false}
 pnx833x: {device_tree: false}
 ralink:
+  compatible: {'ralink,rt3352-soc': examples/mips/ralink/profile.yaml, 'ralink,rt3883-soc': examples/mips/ralink/profile.yaml}
   device_tree: true
   targets:
     openwrt: [ramips]
+  profiles:
+    examples/mips/ralink/profile.yaml: {brand: openwrt, revision: '15.05', version: 3.18.20}
 rb532:
   device_tree: false
   targets:
