--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -1,61 +1,185 @@
-intc,generic:
-    parameters: [name, reg, intcp]
-    get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn|__restore_irqn }})
-    get_header: ['hw/intc/{{ name }}.h']
-    get_field: ['{{ name|upper }}State {{ name }};']
-    get_body:
-        - object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_{{ name|upper }});
-        - qdev_set_parent_bus(DEVICE(&s->{{ name }}), sysbus_get_default());
-        - object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);
-        - sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ reg.base }});
-        - qdev_connect_gpio_out(DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn }});
-ralink,rt2880-intc:
-    get_registers:
-        - {rname: r0, offset: '0x00', mask_ack: False, mask: False, unmask: False, ack: False}
-        - {rname: r1, offset: '0x34', unmask_action: (1 << irqn), mask_ack: False, mask: False, unmask: True, ack: False}
-        - {rname: r2, offset: '0x38', mask_ack_action: (1 << irqn), mask_ack: True, mask_action: (1 << irqn), mask: True, unmask: False, ack: False}
-    irqn_to_regs:
-        - {irqn: 5, set_body: ['s->r0 |= 0x00000020;'], clear_body: ['s->r0 &= ~0x00000020;']}
-        - {irqn: 12, set_body: ['s->r0 |= 0x00001000;'], clear_body: ['s->r0 &= ~0x00001000;']}
-    extend: intc,generic
-    external: True
+abilis,tb10x-ictl: {extend: 'intc,generic'}
+al,alpine-msix: {extend: 'intc,generic'}
+allwinner,sun4i-a10-ic: {extend: 'intc,generic'}
+allwinner,sun6i-a31-r-intc: {extend: 'intc,generic'}
+allwinner,sun6i-a31-sc-nmi: {extend: 'intc,generic'}
+allwinner,sun7i-a20-sc-nmi: {extend: 'intc,generic'}
+allwinner,sun9i-a80-nmi: {extend: 'intc,generic'}
+alphascale,asm9260-icoll: {extend: 'intc,generic'}
+arm,arm1176jzf-devchip-gic: {extend: 'intc,generic'}
 arm,arm11mp-gic:
-    paramters: [name, reg, intcp]
-    get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }})
-    get_header: [hw/cpu/arm11mpcore.h]
-    get_field: ['ARM11MPCorePriveState {{ name }};']
-    get_body:
-        - object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_ARM11MPCORE_PRIV);
-        - object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);
-        - sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ reg.base }} & 0xffff0000);
-        - sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn }});
-    buddy_compatible: ['arm,arm11mp-twd-timer', 'mpcore_wdt']
-marvell,orion-intc:
-    get_registers:
-        - {rname: r0, offset: '0x00', mask_ack: False, mask: False, unmask: False, ack: False}
-        - {rname: r1, offset: '0x04', mask_action: '(old & (~(1 << (irqn % 32))))', unmask_action: '(old | ((1 << (irqn % 32))))', mask_ack: False, mask: True, unmask: True, ack: False}
-    irqn_to_regs:
-        - {irqn: 0, set_body: ['s->r0 |= 0x00000001;'], clear_body: ['s->r0 &= ~0x00000001;']}
-        - {irqn: 3, set_body: ['s->r0 |= 0x00000008;'], clear_body: ['s->r0 &= ~0x00000008;']}
-        - {irqn: 4, set_body: ['s->r0 |= 0x00000010;'], clear_body: ['s->r0 &= ~0x00000010;']}
-    extend: intc,generic
-    external: True
+  buddy_compatible: ['arm,arm11mp-twd-timer', mpcore_wdt]
+  get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_ARM11MPCORE_PRIV);',
+    'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
+      name }}), 0, {{ reg.base }} & 0xffff0000);', 'sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{
+      name }}), 0, {{ intcp.get_irqn }});']
+  get_field: ['ARM11MPCorePriveState {{ name }};']
+  get_header: [hw/cpu/arm11mpcore.h]
+  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }})
+  paramters: [name, reg, intcp]
+arm,armv7m-nvic: {extend: 'intc,generic'}
+arm,cortex-a15-gic: {extend: 'intc,generic'}
+arm,cortex-a7-gic: {extend: 'intc,generic'}
+arm,cortex-a9-gic: {extend: 'intc,generic'}
+arm,eb11mp-gic: {extend: 'intc,generic'}
+arm,gic-400: {extend: 'intc,generic'}
+arm,gic-v3: {extend: 'intc,generic'}
+arm,pl190-vic: {extend: 'intc,generic'}
+arm,pl192-vic: {extend: 'intc,generic'}
+arm,pl390: {extend: 'intc,generic'}
+arm,tc11mp-gic: {extend: 'intc,generic'}
+arm,versatile-fpga-irq: {extend: 'intc,generic'}
+arm,versatile-sic: {extend: 'intc,generic'}
+arm,versatile-vic: {extend: 'intc,generic'}
+aspeed,ast2400-i2c-ic: {extend: 'intc,generic'}
+aspeed,ast2400-vic: {extend: 'intc,generic'}
+aspeed,ast2500-i2c-ic: {extend: 'intc,generic'}
+aspeed,ast2500-vic: {extend: 'intc,generic'}
+atmel,at91rm9200-aic: {extend: 'intc,generic'}
+atmel,sama5d2-aic: {extend: 'intc,generic'}
+atmel,sama5d3-aic: {extend: 'intc,generic'}
+atmel,sama5d4-aic: {extend: 'intc,generic'}
+brcm,bcm2835-armctrl-ic: {extend: 'intc,generic'}
+brcm,bcm2836-armctrl-ic: {extend: 'intc,generic'}
+brcm,bcm2836-l1-intc: {extend: 'intc,generic'}
+brcm,bcm3380-l2-intc: {extend: 'intc,generic'}
+brcm,bcm6345-l1-intc: {extend: 'intc,generic'}
+brcm,bcm7038-l1-intc: {extend: 'intc,generic'}
+brcm,bcm7120-l2-intc: {extend: 'intc,generic'}
+brcm,l2-intc: {extend: 'intc,generic'}
+cdns,xtensa-mx: {extend: 'intc,generic'}
+cdns,xtensa-pic: {extend: 'intc,generic'}
+cirrus,ep7209-intc: {extend: 'intc,generic'}
+cnxt,cx92755-ic: {extend: 'intc,generic'}
+cortina,gemini-interrupt-controller: {extend: 'intc,generic'}
+ezchip,nps400-ic: {extend: 'intc,generic'}
+faraday,ftintc010: {extend: 'intc,generic'}
+fsl,icoll: {extend: 'intc,generic'}
+fsl,imx7d-gpc: {extend: 'intc,generic'}
+fsl,vf610-mscm-ir: {extend: 'intc,generic'}
+hisilicon,hip04-intc: {extend: 'intc,generic'}
+ingenic,jz4740-intc: {extend: 'intc,generic'}
+ingenic,jz4770-intc: {extend: 'intc,generic'}
+ingenic,jz4775-intc: {extend: 'intc,generic'}
+ingenic,jz4780-intc: {extend: 'intc,generic'}
+intc,generic:
+  get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_{{ name|upper
+      }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}), sysbus_get_default());',
+    'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
+      name }}), 0, {{ reg.base }});', 'qdev_connect_gpio_out(DEVICE(&s->{{ name }}),
+      0, {{ intcp.get_irqn }});']
+  get_field: ['{{ name|upper }}State {{ name }};']
+  get_header: ['hw/intc/{{ name }}.h']
+  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn|__restore_irqn
+    }})
+  parameters: [name, reg, intcp]
+intel,i8259: {extend: 'intc,generic'}
+jcore,aic1: {extend: 'intc,generic'}
+jcore,aic2: {extend: 'intc,generic'}
+lsi,zevio-intc: {extend: 'intc,generic'}
+marvell,mpic: {extend: 'intc,generic'}
+marvell,odmi-controller: {extend: 'intc,generic'}
 marvell,orion-bridge-intc:
-    get_registers:
-        - {rname: r0, offset: '0x00', ack_action: '(~(1 << (irqn % 32)))', mask_ack: False, mask: False, unmask: False, ack: True}
-        - {rname: r1, offset: '0x04', mask_action: '(old & (~(1 << (irqn % 32))))', unmask_action: '(old | (1 << (irqn % 32)))', mask_ack: False, mask: True, unmask: True, ack: False}
-    irqn_to_regs:
-        - {irqn: 1, set_body: ['s->r0 |= 0x00000002;'], clear_body: ['s->r0 &= ~0x00000002;']}
-        - {irqn: 2, set_body: ['s->r0 |= 0x00000004;'], clear_body: ['s->r0 &= ~0x00000004;']}
-        - {irqn: 3, set_body: ['s->r0 |= 0x00000008;'], clear_body: ['s->r0 &= ~0x00000008;']}
-    extend: intc,generic
-    external: True
+  extend: intc,generic
+  external: true
+  get_registers:
+  - {ack: true, ack_action: (~(1 << (irqn % 32))), mask: false, mask_ack: false, offset: '0x00',
+    rname: r0, unmask: false}
+  - {ack: false, mask: true, mask_ack: false, mask_action: (old & (~(1 << (irqn %
+      32)))), offset: '0x04', rname: r1, unmask: true, unmask_action: (old | (1 <<
+      (irqn % 32)))}
+  irqn_to_regs:
+  - clear_body: [s->r0 &= ~0x00000002;]
+    irqn: 1
+    set_body: [s->r0 |= 0x00000002;]
+  - clear_body: [s->r0 &= ~0x00000004;]
+    irqn: 2
+    set_body: [s->r0 |= 0x00000004;]
+  - clear_body: [s->r0 &= ~0x00000008;]
+    irqn: 3
+    set_body: [s->r0 |= 0x00000008;]
+marvell,orion-intc:
+  extend: intc,generic
+  external: true
+  get_registers:
+  - {ack: false, mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false}
+  - {ack: false, mask: true, mask_ack: false, mask_action: (old & (~(1 << (irqn %
+      32)))), offset: '0x04', rname: r1, unmask: true, unmask_action: (old | ((1 <<
+      (irqn % 32))))}
+  irqn_to_regs:
+  - clear_body: [s->r0 &= ~0x00000001;]
+    irqn: 0
+    set_body: [s->r0 |= 0x00000001;]
+  - clear_body: [s->r0 &= ~0x00000008;]
+    irqn: 3
+    set_body: [s->r0 |= 0x00000008;]
+  - clear_body: [s->r0 &= ~0x00000010;]
+    irqn: 4
+    set_body: [s->r0 |= 0x00000010;]
+mediatek,mt6577-sysirq: {extend: 'intc,generic'}
+mediatek,mtk-cirq: {extend: 'intc,generic'}
+microchip,pic32mzda-evic: {extend: 'intc,generic'}
+moxa,moxart-ic: {extend: 'intc,generic'}
+mrvl,mmp-intc: {extend: 'intc,generic'}
+mrvl,mmp2-intc: {extend: 'intc,generic'}
+mrvl,mmp2-mux-intc: {extend: 'intc,generic'}
 mti,cpu-interrupt-controller:
-    paramters: []
-    get_irqn: s->cpu->env.irq[{{ irqn }}]
-    get_header: [hw/mips/cpudevs.h]
-    get_field: []
-    get_body:
-        - cpu_mips_irq_init_cpu(s->cpu);
-        - cpu_mips_clock_init(s->cpu);
-
+  get_body: [cpu_mips_irq_init_cpu(s->cpu);, cpu_mips_clock_init(s->cpu);]
+  get_field: []
+  get_header: [hw/mips/cpudevs.h]
+  get_irqn: s->cpu->env.irq[{{ irqn }}]
+  paramters: []
+mti,gic: {extend: 'intc,generic'}
+nvidia,tegra20-ictlr: {extend: 'intc,generic'}
+nvidia,tegra210-ictlr: {extend: 'intc,generic'}
+nvidia,tegra30-ictlr: {extend: 'intc,generic'}
+nxp,lpc3220-mic: {extend: 'intc,generic'}
+nxp,lpc3220-sic: {extend: 'intc,generic'}
+opencores,or1200-pic: {extend: 'intc,generic'}
+opencores,or1k-pic: {extend: 'intc,generic'}
+opencores,or1k-pic-edge: {extend: 'intc,generic'}
+opencores,or1k-pic-level: {extend: 'intc,generic'}
+oxsemi,ox810se-rps-irq: {extend: 'intc,generic'}
+qca,ar7100-cpu-intc: {extend: 'intc,generic'}
+qca,ar7100-misc-intc: {extend: 'intc,generic'}
+qca,ar7240-misc-intc: {extend: 'intc,generic'}
+qca,ar9340-intc: {extend: 'intc,generic'}
+qcom,msm-8660-qgic: {extend: 'intc,generic'}
+qcom,msm-qgic2: {extend: 'intc,generic'}
+ralink,rt2880-intc:
+  extend: intc,generic
+  external: true
+  get_registers:
+  - {ack: false, mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false}
+  - {ack: false, mask: false, mask_ack: false, offset: '0x34', rname: r1, unmask: true,
+    unmask_action: (1 << irqn)}
+  - {ack: false, mask: true, mask_ack: true, mask_ack_action: (1 << irqn), mask_action: (1
+      << irqn), offset: '0x38', rname: r2, unmask: false}
+  irqn_to_regs:
+  - clear_body: [s->r0 &= ~0x00000020;]
+    irqn: 5
+    set_body: [s->r0 |= 0x00000020;]
+  - clear_body: [s->r0 &= ~0x00001000;]
+    irqn: 12
+    set_body: [s->r0 |= 0x00001000;]
+renesas,h8300h-intc: {extend: 'intc,generic'}
+renesas,h8s-intc: {extend: 'intc,generic'}
+samsung,exynos4210-combiner: {extend: 'intc,generic'}
+samsung,s3c2410-irq: {extend: 'intc,generic'}
+samsung,s3c2416-irq: {extend: 'intc,generic'}
+sigma,smp8642-intc: {extend: 'intc,generic'}
+sirf,prima2-intc: {extend: 'intc,generic'}
+snps,dw-apb-ictl: {extend: 'intc,generic'}
+st,spear300-shirq: {extend: 'intc,generic'}
+st,spear310-shirq: {extend: 'intc,generic'}
+st,spear320-shirq: {extend: 'intc,generic'}
+st,stm32-exti: {extend: 'intc,generic'}
+ti,am33xx-intc: {extend: 'intc,generic'}
+ti,dm814-intc: {extend: 'intc,generic'}
+ti,dm816-intc: {extend: 'intc,generic'}
+ti,irq-crossbar: {extend: 'intc,generic'}
+ti,omap2-intc: {extend: 'intc,generic'}
+ti,omap3-intc: {extend: 'intc,generic'}
+via,vt8500-intc: {extend: 'intc,generic'}
+xlnx,opb-intc-1.00.c: {extend: 'intc,generic'}
+xlnx,xps-intc-1.00.a: {extend: 'intc,generic'}
