--- a/slcore/database/qemu.clk.yaml
+++ b/slcore/database/qemu.clk.yaml
@@ -1,3 +1,4 @@
+allwinner,sun4i-a10: {extend: 'clk,generic'}
 allwinner,sun4i-a10-ahb-clk: {extend: 'clk,generic'}
 allwinner,sun4i-a10-ahb-gates-clk: {extend: 'clk,generic'}
 allwinner,sun4i-a10-apb0-clk: {extend: 'clk,generic'}
@@ -13,6 +14,8 @@ allwinner,sun4i-a10-display-clk: {extend: 'clk,generic'}
 allwinner,sun4i-a10-dram-gates-clk: {extend: 'clk,generic'}
 allwinner,sun4i-a10-gates-clk: {extend: 'clk,generic'}
 allwinner,sun4i-a10-mmc-clk: {extend: 'clk,generic'}
+allwinner,sun4i-a10-mmc-output-clk: {extend: 'clk,generic'}
+allwinner,sun4i-a10-mmc-sample-clk: {extend: 'clk,generic'}
 allwinner,sun4i-a10-mod0-clk: {extend: 'clk,generic'}
 allwinner,sun4i-a10-mod1-clk: {extend: 'clk,generic'}
 allwinner,sun4i-a10-osc-clk: {extend: 'clk,generic'}
@@ -27,10 +30,12 @@ allwinner,sun4i-a10-usb-clk: {extend: 'clk,generic'}
 allwinner,sun4i-a10-ve-clk: {extend: 'clk,generic'}
 allwinner,sun50i-a64-r-ccu: {extend: 'clk,generic'}
 allwinner,sun50i-h5-ccu: {extend: 'clk,generic'}
+allwinner,sun5i-a10s: {extend: 'clk,generic'}
 allwinner,sun5i-a10s-ahb-gates-clk: {extend: 'clk,generic'}
 allwinner,sun5i-a10s-apb0-gates-clk: {extend: 'clk,generic'}
 allwinner,sun5i-a10s-apb1-gates-clk: {extend: 'clk,generic'}
 allwinner,sun5i-a10s-ccu: {extend: 'clk,generic'}
+allwinner,sun5i-a13: {extend: 'clk,generic'}
 allwinner,sun5i-a13-ahb-clk: {extend: 'clk,generic'}
 allwinner,sun5i-a13-ahb-gates-clk: {extend: 'clk,generic'}
 allwinner,sun5i-a13-apb0-gates-clk: {extend: 'clk,generic'}
@@ -39,6 +44,7 @@ allwinner,sun5i-a13-ccu: {extend: 'clk,generic'}
 allwinner,sun5i-a13-mbus-clk: {extend: 'clk,generic'}
 allwinner,sun5i-a13-pll2-clk: {extend: 'clk,generic'}
 allwinner,sun5i-a13-usb-clk: {extend: 'clk,generic'}
+allwinner,sun6i-a31: {extend: 'clk,generic'}
 allwinner,sun6i-a31-ahb1-clk: {extend: 'clk,generic'}
 allwinner,sun6i-a31-ahb1-gates-clk: {extend: 'clk,generic'}
 allwinner,sun6i-a31-ahb1-mux-clk: {extend: 'clk,generic'}
@@ -50,6 +56,7 @@ allwinner,sun6i-a31-pll1-clk: {extend: 'clk,generic'}
 allwinner,sun6i-a31-pll6-clk: {extend: 'clk,generic'}
 allwinner,sun6i-a31-rtc: {extend: 'clk,generic'}
 allwinner,sun6i-a31-usb-clk: {extend: 'clk,generic'}
+allwinner,sun7i-a20: {extend: 'clk,generic'}
 allwinner,sun7i-a20-ahb-gates-clk: {extend: 'clk,generic'}
 allwinner,sun7i-a20-apb0-gates-clk: {extend: 'clk,generic'}
 allwinner,sun7i-a20-apb1-gates-clk: {extend: 'clk,generic'}
@@ -57,6 +64,7 @@ allwinner,sun7i-a20-ccu: {extend: 'clk,generic'}
 allwinner,sun7i-a20-gmac-clk: {extend: 'clk,generic'}
 allwinner,sun7i-a20-out-clk: {extend: 'clk,generic'}
 allwinner,sun7i-a20-pll4-clk: {extend: 'clk,generic'}
+allwinner,sun8i-a23: {extend: 'clk,generic'}
 allwinner,sun8i-a23-ahb1-gates-clk: {extend: 'clk,generic'}
 allwinner,sun8i-a23-apb0-clk: {extend: 'clk,generic'}
 allwinner,sun8i-a23-apb1-gates-clk: {extend: 'clk,generic'}
@@ -128,11 +136,15 @@ atmel,at91rm9200-clk-pll: {extend: 'clk,generic'}
 atmel,at91rm9200-clk-programmable: {extend: 'clk,generic'}
 atmel,at91rm9200-clk-system: {extend: 'clk,generic'}
 atmel,at91rm9200-clk-usb: {extend: 'clk,generic'}
+atmel,at91rm9200-pmc: {extend: 'clk,generic'}
 atmel,at91sam9260-clk-slow: {extend: 'clk,generic'}
+atmel,at91sam9260-pmc: {extend: 'clk,generic'}
 atmel,at91sam9g20-clk-pllb: {extend: 'clk,generic'}
 atmel,at91sam9g45-clk-pll: {extend: 'clk,generic'}
 atmel,at91sam9g45-clk-programmable: {extend: 'clk,generic'}
+atmel,at91sam9g45-pmc: {extend: 'clk,generic'}
 atmel,at91sam9n12-clk-usb: {extend: 'clk,generic'}
+atmel,at91sam9n12-pmc: {extend: 'clk,generic'}
 atmel,at91sam9x5-clk-main: {extend: 'clk,generic'}
 atmel,at91sam9x5-clk-main-rc-osc: {extend: 'clk,generic'}
 atmel,at91sam9x5-clk-master: {extend: 'clk,generic'}
@@ -142,12 +154,14 @@ atmel,at91sam9x5-clk-programmable: {extend: 'clk,generic'}
 atmel,at91sam9x5-clk-smd: {extend: 'clk,generic'}
 atmel,at91sam9x5-clk-usb: {extend: 'clk,generic'}
 atmel,at91sam9x5-clk-utmi: {extend: 'clk,generic'}
+atmel,at91sam9x5-pmc: {extend: 'clk,generic'}
 atmel,at91sam9x5-sckc: {extend: 'clk,generic'}
 atmel,sama5d2-clk-audio-pll-frac: {extend: 'clk,generic'}
 atmel,sama5d2-clk-audio-pll-pad: {extend: 'clk,generic'}
 atmel,sama5d2-clk-audio-pll-pmc: {extend: 'clk,generic'}
 atmel,sama5d2-clk-generated: {extend: 'clk,generic'}
 atmel,sama5d3-clk-pll: {extend: 'clk,generic'}
+atmel,sama5d3-pmc: {extend: 'clk,generic'}
 atmel,sama5d4-clk-h32mx: {extend: 'clk,generic'}
 atmel,sama5d4-sckc: {extend: 'clk,generic'}
 axis,artpec6-clkctrl: {extend: 'clk,generic'}
@@ -171,6 +185,8 @@ calxeda,hb-a9bus-clock: {extend: 'clk,generic'}
 calxeda,hb-a9periph-clock: {extend: 'clk,generic'}
 calxeda,hb-emmc-clock: {extend: 'clk,generic'}
 calxeda,hb-pll-clock: {extend: 'clk,generic'}
+cdns,xtfpga-clock: {extend: 'clk,generic'}
+cirrus,clps711x-clk: {extend: 'clk,generic'}
 cirrus,ep7209-clk: {extend: 'clk,generic'}
 cortina,gemini-syscon: {extend: 'clk,generic'}
 efm32gg,cmu: {extend: 'clk,generic'}
@@ -209,6 +225,7 @@ fsl,qoriq-platform-pll-2.0: {extend: 'clk,generic'}
 fsl,qoriq-sysclk-1.0: {extend: 'clk,generic'}
 fsl,qoriq-sysclk-2.0: {extend: 'clk,generic'}
 fsl,vf610-ccm: {extend: 'clk,generic'}
+gpio-gate-clock: {extend: 'clk,generic'}
 hisilicon,hi3620-clock: {extend: 'clk,generic'}
 hisilicon,hi3620-mmc-clock: {extend: 'clk,generic'}
 hisilicon,hi3660-crgctrl: {extend: 'clk,generic'}
@@ -242,7 +259,10 @@ marvell,armada-390-core-clock: {extend: 'clk,generic'}
 marvell,armada-390-gating-clock: {extend: 'clk,generic'}
 marvell,armada-xp-core-clock: {extend: 'clk,generic'}
 marvell,armada-xp-cpu-clock: {extend: 'clk,generic'}
+marvell,berlin2-chip-ctrl: {extend: 'clk,generic'}
 marvell,berlin2-clk: {extend: 'clk,generic'}
+marvell,berlin2cd-chip-ctrl: {extend: 'clk,generic'}
+marvell,berlin2q-chip-ctrl: {extend: 'clk,generic'}
 marvell,berlin2q-clk: {extend: 'clk,generic'}
 marvell,dove-core-clock: {extend: 'clk,generic'}
 marvell,kirkwood-core-clock: {extend: 'clk,generic'}
@@ -255,6 +275,7 @@ marvell,mv88f6183-core-clock: {extend: 'clk,generic'}
 marvell,mv98dx3236-core-clock: {extend: 'clk,generic'}
 marvell,mv98dx3236-corediv-clock: {extend: 'clk,generic'}
 marvell,mv98dx3236-cpu-clock: {extend: 'clk,generic'}
+marvell,pxa-clocks: {extend: 'clk,generic'}
 marvell,pxa168-clock: {extend: 'clk,generic'}
 marvell,pxa1928-apbc: {extend: 'clk,generic'}
 marvell,pxa1928-apmu: {extend: 'clk,generic'}
@@ -292,6 +313,17 @@ nxp,lpc1850-cgu: {extend: 'clk,generic'}
 nxp,lpc1850-creg-clk: {extend: 'clk,generic'}
 nxp,lpc3220-clk: {extend: 'clk,generic'}
 nxp,lpc3220-usb-clk: {extend: 'clk,generic'}
+plxtech,nas782x-plla: {extend: 'clk,generic'}
+plxtech,nas782x-pllb: {extend: 'clk,generic'}
+plxtech,nas782x-stdclk: {extend: 'clk,generic'}
+qca,ar7100-pll: {extend: 'clk,generic'}
+qca,ar7240-pll: {extend: 'clk,generic'}
+qca,ar9130-pll: {extend: 'clk,generic'}
+qca,ar9330-pll: {extend: 'clk,generic'}
+qca,ar9340-pll: {extend: 'clk,generic'}
+qca,qca9530-pll: {extend: 'clk,generic'}
+qca,qca9550-pll: {extend: 'clk,generic'}
+qca,qca9560-pll: {extend: 'clk,generic'}
 renesas,cpg-div6-clock: {extend: 'clk,generic'}
 renesas,cpg-mstp-clocks: {extend: 'clk,generic'}
 renesas,emev2-smu-clkdiv: {extend: 'clk,generic'}
@@ -396,8 +428,15 @@ sirf,atlas7-car: {extend: 'clk,generic'}
 sirf,prima2-clkc: {extend: 'clk,generic'}
 snps,axs10x-arc-pll-clock: {extend: 'clk,generic'}
 snps,hsdk-core-pll-clock: {extend: 'clk,generic'}
+st,clkgen-mux: {extend: 'clk,generic'}
 st,clkgen-pll0: {extend: 'clk,generic'}
 st,clkgen-pll1: {extend: 'clk,generic'}
+st,clkgen-plls-c32: {extend: 'clk,generic'}
+st,clkgen-vcc: {extend: 'clk,generic'}
+st,clkgena-divmux: {extend: 'clk,generic'}
+st,clkgena-plls-c65: {extend: 'clk,generic'}
+st,clkgena-prediv: {extend: 'clk,generic'}
+st,clkgengpu-pll-c32: {extend: 'clk,generic'}
 st,flexgen: {extend: 'clk,generic'}
 st,nomadik-hclk-clock: {extend: 'clk,generic'}
 st,nomadik-pll-clock: {extend: 'clk,generic'}
