--- a/slcore/database/qemu.serial.yaml
+++ b/slcore/database/qemu.serial.yaml
@@ -1,3 +1,5 @@
+? ''
+: {extend: 'serial,generic'}
 actions,owl-uart: {extend: 'serial,generic'}
 altr,juart-1.0: {extend: 'serial,generic'}
 altr,uart-1.0: {extend: 'serial,generic'}
