--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -44,7 +44,9 @@ brcm,bcm2835-armctrl-ic: {extend: 'intc,generic'}
 brcm,bcm2836-armctrl-ic: {extend: 'intc,generic'}
 brcm,bcm2836-l1-intc: {extend: 'intc,generic'}
 brcm,bcm3380-l2-intc: {extend: 'intc,generic'}
+brcm,bcm6345-ext-intc: {extend: 'intc,generic'}
 brcm,bcm6345-l1-intc: {extend: 'intc,generic'}
+brcm,bcm6345-periph-intc: {extend: 'intc,generic'}
 brcm,bcm7038-l1-intc: {extend: 'intc,generic'}
 brcm,bcm7120-l2-intc: {extend: 'intc,generic'}
 brcm,l2-intc: {extend: 'intc,generic'}
@@ -146,9 +148,25 @@ opencores,or1k-pic-edge: {extend: 'intc,generic'}
 opencores,or1k-pic-level: {extend: 'intc,generic'}
 oxsemi,ox810se-rps-irq: {extend: 'intc,generic'}
 plxtech,nas782x-rps: {extend: 'intc,generic'}
-qca,ar7100-cpu-intc: {extend: 'intc,generic'}
+qca,ar7100-cpu-intc: {extend: 'mti,cpu-interrupt-controller'}
 qca,ar7100-misc-intc: {extend: 'intc,generic'}
-qca,ar7240-misc-intc: {extend: 'intc,generic'}
+qca,ar7240-misc-intc:
+  extend: intc,generic
+  external: true
+  get_registers:
+  - {ack: false, mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false}
+  - {ack: false, mask: true, mask_ack: false, mask_action: (1 << irqn), offset: '0x04',
+    rname: r1, unmask: true, unmask_action: (1 << irqn)}
+  irqn_to_regs:
+  - clear_body: [s->r0 &= ~(1 << 2);]
+    irqn: 2
+    set_body: [s->r0 |= (1 << 2);]
+  - clear_body: [s->r0 &= ~(1 << 3);]
+    irqn: 3
+    set_body: [s->r0 |= (1 << 3);]
+  - clear_body: [s->r0 &= ~(1 << 4);]
+    irqn: 4
+    set_body: [s->r0 |= (1 << 4);]
 qca,ar9340-intc: {extend: 'intc,generic'}
 qcom,msm-8660-qgic: {extend: 'intc,generic'}
 qcom,msm-qgic2: {extend: 'intc,generic'}
