--- a/slcore/database/qemu.cpu.yaml
+++ b/slcore/database/qemu.cpu.yaml
@@ -61,6 +61,9 @@ mips,mips24Kc:
 mips,mips24KEc:
     extend: mips(el),general
     get_type: 24KEc
+mips,mips4Kc:
+    extend: mips(el),general
+    get_type: 4Kc
 mips,mips4KEc:
     extend: mips(el),general
     get_type: 4KEc
