--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -11,12 +11,12 @@ arm,arm11mp-gic:
   buddy_compatible: ['arm,arm11mp-twd-timer', mpcore_wdt]
   get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_ARM11MPCORE_PRIV);',
     'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
-      name }}), 0, {{ reg.base }} & 0xffff0000);', 'sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{
-      name }}), 0, {{ intcp.get_irqn }});']
+      name }}), 0, {{ reg.base }} & 0xffff0000);']
+  get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn }});']
   get_field: ['ARM11MPCorePriveState {{ name }};']
   get_header: [hw/cpu/arm11mpcore.h]
   get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }})
-  paramters: [name, reg, intcp]
+  paramters: [name, regs, intcp]
 arm,armv7m-nvic: {extend: 'intc,generic'}
 arm,cortex-a15-gic: {extend: 'intc,generic'}
 arm,cortex-a7-gic: {extend: 'intc,generic'}
@@ -71,16 +71,15 @@ ingenic,jz4770-intc: {extend: 'intc,generic'}
 ingenic,jz4775-intc: {extend: 'intc,generic'}
 ingenic,jz4780-intc: {extend: 'intc,generic'}
 intc,generic:
-  get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_{{ name|upper
-      }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}), sysbus_get_default());',
-    'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
-      name }}), 0, {{ reg.base }});', 'qdev_connect_gpio_out(DEVICE(&s->{{ name }}),
-      0, {{ intcp.get_irqn }});']
-  get_field: ['{{ name|upper }}State {{ name }};']
+  get_body: ['object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id }}), TYPE_{{ name|upper
+      }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
+    'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
+      name }}{{ id }}), 0, {{ reg.base }});']
+  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), 0, {{ intcp.get_irqn }});']
+  get_field: ['{{ name|upper }}State {{ name }}{{ id }};']
   get_header: ['hw/intc/{{ name }}.h']
-  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn|__restore_irqn
-    }})
-  parameters: [name, reg, intcp]
+  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}{{ iid }}), {{ irqn }})
+  parameters: [name, regs, intcp]
 intel,i8259: {extend: 'intc,generic'}
 jcore,aic1: {extend: 'intc,generic'}
 jcore,aic2: {extend: 'intc,generic'}
@@ -89,6 +88,7 @@ marvell,mpic: {extend: 'intc,generic'}
 marvell,odmi-controller: {extend: 'intc,generic'}
 marvell,orion-bridge-intc:
   extend: intc,generic
+  n_irq: 32
   external: true
   get_registers:
   - {ack: true, ack_action: (~(1 << (irqn % 32))), mask: false, mask_ack: false, offset: '0x00',
@@ -108,6 +108,7 @@ marvell,orion-bridge-intc:
     set_body: [s->r0 |= 0x00000008;]
 marvell,orion-intc:
   extend: intc,generic
+  n_irq: 32
   external: true
   get_registers:
   - {ack: false, mask: false, mask_ack: false, offset: '0x00', rname: r0, unmask: false}
@@ -134,6 +135,7 @@ mrvl,mmp2-intc: {extend: 'intc,generic'}
 mrvl,mmp2-mux-intc: {extend: 'intc,generic'}
 mti,cpu-interrupt-controller:
   get_body: [cpu_mips_irq_init_cpu(s->cpu);, cpu_mips_clock_init(s->cpu);]
+  get_connection: []
   get_field: []
   get_header: [hw/mips/cpudevs.h]
   get_irqn: s->cpu->env.irq[{{ irqn }}]
