--- a/slcore/database/iv.arm.yaml
+++ b/slcore/database/iv.arm.yaml
@@ -1,3 +1,8 @@
 mach-oxnas:
     - {base: 0x44e001f0, size: 0x4, value: 0x8000, compatible: ['mach-oxnas-iv-001']}
     - {base: 0x44e001f4, size: 0x4, value: 0x8000, compatible: ['mach-oxnas-iv-002']}
+mach-mvebu:
+      # soc_dev_id = readl(pci_base + PCIE_DEV_ID_OFF) >> 16;
+      # soc_rev = readl(pci_base + PCIE_DEV_REV_OFF) & SOC_REV_MASK;
+    - {base: 0xf1040000, size: 0x4, value: 0x0000, compatible: ['mach-mvebu-001'], path: arch/arm/mach-mvebu/mvebu-soc-id.c, function: get_soc_id_by_pci}
+    - {base: 0xf1040008, size: 0x4, value: 0x0000, compatible: ['mach-mvebu-002'], path: arch/arm/mach-mvebu/mvebu-soc-id.c, function: get_soc_id_by_pci}
