--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -8,6 +8,7 @@ allwinner,sun9i-a80-nmi: {extend: 'intc,generic'}
 alphascale,asm9260-icoll: {extend: 'intc,generic'}
 arm,arm1176jzf-devchip-gic: {extend: 'intc,generic'}
 arm,arm11mp-gic:
+  n_irq: 64
   buddy_compatible: ['arm,arm11mp-twd-timer', mpcore_wdt]
   get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_ARM11MPCORE_PRIV);',
     'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
@@ -16,11 +17,23 @@ arm,arm11mp-gic:
   get_field: ['ARM11MPCorePriveState {{ name }};']
   get_header: [hw/cpu/arm11mpcore.h]
   get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }})
-  paramters: [name, regs, intcp]
+  parameters: [name, regs, intcp]
+  unique: True
 arm,armv7m-nvic: {extend: 'intc,generic'}
 arm,cortex-a15-gic: {extend: 'intc,generic'}
 arm,cortex-a7-gic: {extend: 'intc,generic'}
-arm,cortex-a9-gic: {extend: 'intc,generic'}
+arm,cortex-a9-gic:
+  n_irq: 96
+  buddy_compatible: ['arm,cortex-a9-scu', 'arm,cortex-a9-global-timer', 'arm,cortex-a9-twd-timer']
+  get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_A9MPCORE_PRIV);',
+    'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
+      name }}), 0, {{ reg.base }} & 0xffff0000);']
+  get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn }});']
+  get_field: ['A9MPPrivState {{ name }};']
+  get_header: [hw/cpu/a9mpcore.h]
+  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }})
+  parameters: [name, regs, intcp]
+  unique: True
 arm,eb11mp-gic: {extend: 'intc,generic'}
 arm,gic-400: {extend: 'intc,generic'}
 arm,cortex-a15-gic: {extend: 'intc,generic'}
