add multiple serial command

--- a/slcore/database/qemu.serial.yaml
+++ b/slcore/database/qemu.serial.yaml
@@ -24,21 +24,21 @@ mrvl,pxa-uart: {extend: 'serial,generic'}
 ns16550: {extend: 'ns16550a'}
 ns16550a:
   get_body: ['serial_mm_init(get_system_memory(), {{ reg.base }}, {{ reg_shift }},
-      {{  intcp.get_irqn }}, {{ baud_rate }}, serial_hd({{ id }}), {{ endian }});']
+      {{  intcp.get_irqn }}, {{ baud_rate }}, serial_hd({{ sid }}), {{ endian }});']
   get_connection: []
   get_field: []
   get_header: [hw/char/serial.h]
-  parameters: [regs, reg_shift, intcp, irqn, baud_rate, id, endian]
+  parameters: [regs, reg_shift, intcp, irqn, baud_rate, sid, endian]
 nvidia,tegra20-uart: {extend: 'serial,generic'}
 qcom,msm-uart: {extend: 'serial,generic'}
 qcom,msm-uartdm: {extend: 'serial,generic'}
 ralink,rt2880-uart:
   get_body: ['serial_mm_init_au(get_system_memory(), {{ reg.base }}, {{ reg_shift
-      }}, {{  intcp.get_irqn }}, {{ baud_rate }}, serial_hd({{ id }}), {{ endian }});']
+      }}, {{  intcp.get_irqn }}, {{ baud_rate }}, serial_hd({{ sid }}), {{ endian }});']
   get_connection: []
   get_field: []
   get_header: [hw/char/serial.h]
-  parameters: [regs, reg_shift, intcp, irqn, baud_rate, id, endian]
+  parameters: [regs, reg_shift, intcp, irqn, baud_rate, sid, endian]
 renesas,hscif: {extend: 'serial,generic'}
 renesas,sci: {extend: 'serial,generic'}
 renesas,scif: {extend: 'serial,generic'}
